# email_classifier

./: .gitignore  __main__.py  pyproject.toml
gather/: 20newsgroup.py  enron.py
pre_processing/: __init__.py  main.py
train/: main.py  train.py
