[tool.poetry]
name = "email_classifier"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"
pandas = "2.2.3"
numpy = "^2.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scipy = "^1.10.0"
tensorflow = "^2.19.0"
requests = "^2.32.3"
scikit-learn = "^1.6.1"
qiskit = "^1.4.2"
qiskit-machine-learning = "^0.8.2"
torch = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^24.0"
ruff = "^0.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
